static/css/base.css
html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
  color: #fafafa;
  background-color: #212529;
  overflow-x: hidden;
  scroll-behavior: smooth !important;
}

ul {
  list-style-type: none;
}

form,
label {
  padding-right: 25px;
}

a {
  text-decoration: none;
  color: #fafafa !important;
}

a:hover {
  color: #cf87e9 !important;
}

.alert {
  position: fixed;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  z-index: 1050;
  width: 100%;
  max-width: 600px;
  margin-top: 10px;
}

.message-container {
  position: relative; /* Ensures container doesn’t interfere with fixed positioning */
}

.btn-secondary:hover {
  background-color: #cf87e9 !important;
}

.links {
  color: #cf87e9 !important;
}

.page-content {
  padding-top: 120px;
}

.navbar {
  background: linear-gradient(
    to bottom,
    #212529 95%,
    rgba(33, 37, 41, 0) 99%
  ) !important;
  margin-bottom: 25px;
}

.form-control {
  background-color: #212529; /* Adjust the color as needed */
  color: #fafafa;
  border: none;
}

/* Flexbox layout for form fields */
.form-container {
  display: flex;
  flex-direction: column;
}

.form-container p {
  display: flex;
  flex-direction: row;
  margin-bottom: 10px;
}

.form-container label {
  width: 120px;
  margin-right: 10px;
  text-align: right;
}

.form-container input,
.form-container textarea {
  width: 70%;
}

.list-item {
  font-size: 1rem;
  transition: all 0.2s ease-in-out;
}

.list-item:hover {
  transform: scale(1.5);
}

.card {
  border: none;
}

.portfolio-card {
  margin-top: 25px;
}

#submit-button {
  max-width: 50%;
  align-self: center;
}

#profile-photo {
  max-height: 75%;
  max-width: 75%;
  border-radius: 50%;
}

#projects {
  display: inline-grid;
}

@media (max-width: 768px) {
  /* Form */
  .form-container input,
  .form-container textarea {
    width: 90%;  /* Take up more width on smaller screens */
    margin: 0 auto; /* Center the input fields */
  }

  .form-container p {
    display: block; /* Stack the label and input vertically */
    margin-bottom: 10px;
  }

  /* Adjusting form label positioning */
  .form-container label {
    width: auto; /* Let the label take up only the space it needs */
    text-align: left; /* Align labels to the left on smaller screens */
    margin-bottom: 5px; /* Add a small space below the label */
  }
}

@media (max-width: 992px) {
  /* Projects section */
  .portfolio-image {
    width: 95%; /* Image takes more space on smaller screens */
    margin-bottom: 15px; /* Add some space between image and text */
  }

  .card-text {
    text-align: center;
  }
}

@media (min-width: 992px) {
  .portfolio-card {
    position: relative;
  }

  .portfolio-image {
    width: 50%;
    height: 100%;
    object-fit: cover;
    border-radius: 100%;
    transition: all 1s ease; /* Keep transition for zoom */
    margin-bottom: 30px;
  }

  .overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    opacity: 0;
    pointer-events: none;
    transition: opacity 0.3s ease-in-out;
    z-index: 998; /* Overlay above content but below the image */
  }

  .portfolio-image:hover + .overlay {
    opacity: 1;
  }

  .portfolio-image:hover {
    transform: scale(1.25); /* Zoom in */
    border-radius: 3%; /* remove rounded corners */
    z-index: 9999; /* Bring image to the front */
  }
}

